# nse-stock-prediction

./: .bandit  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  README.md  cli.py  config.py  main.py  pyproject.toml  ruff.toml  setup_precommit.py
api/: README.md  __init__.py  dependencies.py  main.py  models.py  routes.py
modules/: __init__.py  prediction_model.py  stock_analyzer.py  stock_data_fetcher.py  technical_indicators.py
scripts/: __init__.py  setup_project.py  train_models.py  train_models_README.md
