[tool.poetry]
name = "nse-stock-prediction"
version = "1.0.0"
description = "Advanced NSE stock prediction pipeline with ML and technical analysis"
authors = ["Parag Kamble <kamble.parag@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/paraggit/nse-stock-prediction"
repository = "https://github.com/paraggit/nse-stock-prediction"
documentation = "https://github.com/paraggit/nse-stock-prediction#readme"
keywords = ["stock-prediction", "nse", "machine-learning", "technical-analysis", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
packages = [
    {include = "modules"},
    {include = "api"}
]

[tool.poetry.dependencies]
python = ">3.8.1,<3.13"
yfinance = "^0.2.18"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
ta = "^0.10.2"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.4.0"
pydantic-settings = "^2.0.0"
joblib = "^1.3.0"
python-multipart = "^0.0.6"
aiofiles = "^23.0.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.0"
httpx = "^0.25.0"
rich = ">=13.0.0"
typer = {version = ">=0.9.0,<0.13.0", extras = ["all"]}
click = ">=8.0.0,<9.0.0"
APScheduler = "^3.10.0"
redis = {version = "^5.0.0", optional = true}
psycopg2-binary = {version = "^2.9.0", optional = true}
sqlalchemy = {version = "^2.0.0", optional = true}
alembic = {version = "^1.12.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.0"
pytest-xdist = "^3.3.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.0"
mypy = "^1.5.0"
pre-commit = "^3.4.0"
jupyter = "^1.0.0"
ipykernel = "^6.25.0"
notebook = "^7.0.0"
ipywidgets = "^8.1.0"
bandit = "^1.7.0"
safety = "^2.3.0"

[tool.poetry.group.test.dependencies]
factory-boy = "^3.3.0"
freezegun = "^1.2.0"
responses = "^0.23.0"
httpx = "^0.25.0"
pytest-benchmark = "^4.0.0"
coverage = {extras = ["toml"], version = "^7.3.0"}

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.0"
mkdocs-material = "^9.2.0"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-jupyter = "^0.26.0"
mkdocs-awesome-pages-plugin = "^2.9.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.0"
pyupgrade = "^3.10.0"
docformatter = "^1.7.0"

[tool.poetry.extras]
redis = ["redis"]
postgres = ["psycopg2-binary", "sqlalchemy", "alembic"]
all = ["redis", "psycopg2-binary", "sqlalchemy", "alembic"]

[tool.poetry.scripts]
stock-api = "main:main"
train-models = "scripts.train_models:main"
setup-project = "scripts.setup_project:main"
stock-cli = "cli:app"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/your-username/nse-stock-prediction/issues"
"Changelog" = "https://github.com/your-username/nse-stock-prediction/blob/main/CHANGELOG.md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Black configuration
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["modules", "api", "scripts"]
known_third_party = ["fastapi", "pandas", "numpy", "sklearn", "yfinance"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
    -ra
    -q
    --strict-markers
    --strict-config
    --cov=modules
    --cov=api
    --cov-branch
    --cov-report=term-missing
    --cov-report=html:htmlcov
    --cov-report=xml
    --cov-fail-under=80
"""
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests as API tests",
    "ml: marks tests as machine learning tests",
    "external: marks tests that require external services"
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

# MyPy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "ta.*",
    "matplotlib.*",
    "seaborn.*",
    "sklearn.*",
    "joblib.*",
    "pandas.*",
    "numpy.*"
]
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
source = ["modules", "api"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*"
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# Ruff configuration (alternative to flake8)
[tool.ruff]
target-version = "py38"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG001", # unused-function-args
    "ARG002", # unused-method-args
    "ARG003", # unused-class-method-args
    "ARG004", # unused-static-method-args
    "ARG005", # unused-lambda-args
    "D", # pydocstyle
    "EM", # flake8-errmsg
    "ICN", # flake8-import-conventions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "RUF", # Ruff-specific
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "YTT", # flake8-2020
    "EXE", # flake8-executable
]
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D106", # Missing docstring in public nested class
    "D107", # Missing docstring in __init__
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
]
unfixable = [
    "T20", # Removes print statements
    "F841", # Removes unused variables
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
known-first-party = ["modules", "api", "scripts"]

[tool.ruff.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.BackgroundTasks",
    "typer.Argument",
    "typer.Option",
]

[tool.ruff.per-file-ignores]
"api/routes.py" = ["B008"]
"api/main.py" = ["F841"]
"cli.py" = ["B008", "F841"]
"scripts/setup_project.py" = ["F811", "B008"]
"scripts/train_models.py" = ["F841", "B008"]
"modules/prediction_model.py" = ["E722"]
"modules/stock_data_fetcher.py" = ["E722"]

# Bandit configuration (security linting)
[tool.bandit]
exclude_dirs = ["tests", "migrations"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

# Docformatter configuration
[tool.docformatter]
recursive = true
wrap-summaries = 100
wrap-descriptions = 100
blank = true
